blocks/modal.css
.modal {
  font-family: Poppins, Arial, Helvetica, sans-serif;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.5);
  visibility: hidden;
  opacity: 0;
  justify-content: center;
  align-items: center;
  visibility: hidden;
  padding: 0 10px;
  transition: visibility 0.5s linear, opacity 0.5s linear;
}

.modal_type_preview {
  padding: 0 16px;
}

.modal_opened {
  display: flex;
  visibility: visible;
  opacity: 1;
  visibility: visible;
}

.modal__container {
  position: relative;
  background: #fff;
  padding: 32px 50px;
  max-width: 730px;
  width: 100%;
  border-radius: 8px;
  box-sizing: border-box;
}

.modal__image-container {
  position: relative;
}

.modal__image {
  display: block;
  object-fit: contain;
  width: 100%;
  max-width: 80vw;
  max-height: 80vh;
  border-radius: 8px;
}

.modal__caption {
  color: white;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 12px 0;
  width: 214px;
  height: 32px;
  font-weight: 500;
  font-size: 20px;
  line-height: 1;
  background: #212121;
  border-radius: 8px;
}

.modal__close {
  background: #fff url(../images/icons/close-icon.svg) center/contain no-repeat;
  opacity: 0.4;
  border: none;
  background-color: #fff;
  position: absolute;
  top: 32px;
  right: 50px;
  width: 40px;
  height: 40px;
  transition: 0.3s;
}

.modal__close_type_preview {
  top: 0;
  right: -35.51px;
  border: none;
  background: transparent url(../images/icons/close-icon-white.svg)
    center/contain no-repeat;
  opacity: 100%;
  width: 22.63px;
  height: 22.63px;
}

.modal__close_type_preview:hover {
  background-image: url(../images/icons/close-icon-black.svg);
  cursor: pointer;
}

.modal__close:hover {
  opacity: 1;
  cursor: pointer;
}

.modal__title {
  margin: 0 0 32px;
  font-weight: 500;
  font-size: 32px;
  line-height: 1;
  color: #212121;
}

.modal__label {
  display: flex;
  flex-direction: column;
  gap: 8px;
  margin-bottom: 32px;
  color: rgba(33, 33, 33, 0.7);
  line-height: 1.1;
  font-weight: 500;
  font-size: 16px;
}

.modal__submit-btn {
  width: 156px;
  height: 52px;
  padding: 18px 0;
  background-color: #212121;
  color: #fcf5e5;
  border-radius: 8px;
  font-weight: 500;
  font-size: 16px;
  line-height: 1;
  border: none;
}
.modal__submit-btn:hover {
  background-color: rgba(33, 33, 33, 0.8);
  color: rgba(252, 245, 229, 1);
  cursor: pointer;
}

.modal__input {
  padding: 16px 12px;
  border-radius: 8px;
  border-color: rgba(33, 33, 33, 0.4);
  color: #212121;
  font-weight: 500;
  font-size: 20px;
  line-height: 1;
}

.modal__input:hover {
  cursor: pointer;
  border-color: rgba(33, 33, 33, 1);
}

@media screen and (max-width: 480px) {
  .modal {
    padding: 0 10px;
    background-color: rgba(0, 0, 0, 0.95);
  }

  .modal__container {
    padding: 12px;
  }
  .modal__title {
    font-size: 20px;
    margin: 10px 0 34px;
  }

  .modal__close {
    top: 12px;
    right: 12px;
  }
  .modal__label {
    margin-bottom: 24px;
    font-size: 16px;
  }
  .modal__submit-btn {
    width: 100%;
  }

  .modal__input {
    font-size: 16px;
  }

  .modal__caption {
    font-size: 16px;
    width: 175px;
    height: 27px;
  }

  .modal__image {
    max-width: 90vw;
    max-height: 60vh;
  }
}

@media screen and (max-width: 627px) {
  .modal__close_type_preview {
    top: -32px;
    right: 0px;
  }
  .modal {
    background-color: rgba(0, 0, 0, 0.95);
    transition: 0.3s;
  }

  .modal__image {
    max-width: unset;
  }
}

